[package]
name = "chip8core"
version = "0.1.0"
authors = ["Mael Guillossou <mael.guillossou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = { version = "0.8.0", default-features = false, features = ["small_rng"] }
